# Triangular-Transport-Toolbox

./: pyproject.toml
Examples A - spiral distribution/Example 01 - full map/: example_01.py
transport_map/: polynomial_interpreter.py  transport_map.py
