[tool.poetry]
name = "transport_map"
version = "0.1.0"
description = "A package for triangular transport"
authors = ["Max Ramgraber, et al."]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1"
scipy = "^1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "numpy>=2.1", "scipy>=1.9"]
build-backend = "poetry.core.masonry.api"